Fix alignment for share buttons

--- a/src/views/Post/style.scss
+++ b/src/views/Post/style.scss
@@ -73,7 +73,7 @@
         }
 
         &.share {
-          margin: $base-spacing-xsm;
+          margin: $base-spacing-md;
         }
       }
     }
